# SGLPack

./: README  example.cpp  example_FSGLFT.cpp  example_NFSGLFT.cpp  example_script.m
FSFT/: FSFT_seminaive.m  iFSFT_seminaive.m
FSGLFT/: DRT_Clenshaw.m  DSGLFT.m  FSGLFT.m  FSGLFT_Clenshaw.m  R.m  R_mex.c  R_mex.mexa64  iDRT_Clenshaw.m  iDSGLFT.m  iFSGLFT.m  iFSGLFT_Clenshaw.m
cmake/: CMakeLists.txt
cmake_FSGLFT/: CMakeLists.txt
cmake_NFSGLFT/: CMakeLists.txt
half-range_Hermite_quadrature/: half_range_Hermite_quadrature.m  half_range_Hermite_quadrature_abcissae_precomp.m  half_range_Hermite_quadrature_adapted_weights_precomp.m
half-range_Hermite_quadrature/precomp/: 1024_100_digits_abcissae.txt  1024_100_digits_adapted_weights.txt  1024_100_digits_weights.txt  128_100_digits_abcissae.txt  128_100_digits_adapted_weights_test.txt  128_100_digits_weights.txt  16_100_digits_abcissae.txt  16_100_digits_adapted_weights.txt  16_100_digits_weights.txt  256_100_digits_abcissae.txt  256_100_digits_adapted_weights.txt  256_100_digits_weights.txt  2_100_digits_abcissae.txt  2_100_digits_adapted_weights.txt  2_100_digits_weights.txt  32_100_digits_abcissae.txt  32_100_digits_adapted_weights.txt  32_100_digits_weights.txt  4_100_digits_abcissae.txt  4_100_digits_adapted_weights.txt  4_100_digits_weights.txt  512_100_digits_abcissae.txt  512_100_digits_adapted_weights.txt  512_100_digits_weights.txt  (+5 more)
include/: clenshaw.cpp  clenshaw.h  fftw.cpp  fftw.h  flt.cpp  flt.h  fsft.cpp  fsft.h  fsglft.cpp  fsglft.h  nfft_use.cpp  nfft_use.h  nfsglft.cpp  nfsglft.h
(+59 files in other folders)
